Complete rework of Conductor. Templates are vastly simplified, and support custom expressions that we can expand with more functionality later. Registry now apply change locally then submits to subscribers. Avoids subscribing to itself for this reason. Cleanups in models to make them more streamlined and consistent